# Ludus

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txtr  README.md
.github/hooks/: pre-commit.sh
.github/workflows/: develop.yml  release.yml
docs/: CMakeLists.txt  Doxyfile.in  header.html  main.dox  warnings.txt
src/: CMakeLists.txt  compiler.hpp  fs.cpp  fs.hpp  log.cpp  log.hpp  main.cpp  version.hpp  version.hpp.in  yaml.cpp  yaml.hpp
